# newsletter

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
src/coreos_newsletter/: __init__.py  __main__.py  heuristics.py  main.py  models.py  settings.py
src/coreos_newsletter/collectors/: __init__.py  github.py  gitlab.py  jira.py
src/coreos_newsletter/llm/: __init__.py  gemini_step.py
src/coreos_newsletter/pipeline/: __init__.py  bundle_builder.py
